objects/VOC__c.object
<CustomObject>
    <fields>
        <fullName>BDM__c</fullName>
        <formula>Client__r.BDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VOC</relationshipLabel>
        <relationshipName>VOC</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What are the primary reasons you chose to partner with ProService? -Ease</description>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? -Ease</inlineHelpText>
        <label>Ease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What are the primary reasons you chose to partner with ProService? -Expertise</description>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? -Expertise</inlineHelpText>
        <label>Expertise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Specialist__c</fullName>
        <description>Are there any people or experiences you would like to tell us about?</description>
        <formula>Client__r.Implementation_Specialist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lack_of_Own_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What are the primary reasons you chose to partner with ProService? -Lack our own resources</description>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? -Lack our own resources</inlineHelpText>
        <label>Lack of Own Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Reason__c</fullName>
        <description>What is your primary reason for this score?
We're happy to hear that! Tell us what has made your experience so positive. (9-10)
Sounds like we have some room to improve. What do we need to do better? (7-8)
We're sorry to hear that. Why has your experience been negative? (1-6)</description>
        <inlineHelpText>What is your primary reason for this score?</inlineHelpText>
        <label>NPS Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <description>On a scale of 0-10, how likely are you to recommend ProService to a business associate?</description>
        <inlineHelpText>On a scale of 0-10, how likely are you to recommend ProService to a business associate?</inlineHelpText>
        <label>NPS</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Please_Specify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What are the primary reasons you chose to partner with ProService? -Other (Please Specify)</description>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? -Other (Please Specify)</inlineHelpText>
        <label>Other (Please Specify)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_TEXT__c</fullName>
        <description>What are the primary reasons you chose to partner with ProService?</description>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? -Other (Please Specify)-TEXT</inlineHelpText>
        <label>Other-TEXT (Please Specify)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Experiences__c</fullName>
        <description>Are there any people or experiences you would like to tell us about?</description>
        <inlineHelpText>Are there any people or experiences you would like to tell us about?</inlineHelpText>
        <label>People/Experiences</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengthen_Partnership__c</fullName>
        <description>What one thing could ProService do to strengthen your partnership with us?</description>
        <inlineHelpText>What one thing could ProService do to strengthen your partnership with us?</inlineHelpText>
        <label>Strengthen Partnership</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Client__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>Client__r.Service_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_Completion_Date__c</fullName>
        <label>VOC Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOC_Contact_Email__c</fullName>
        <label>VOC Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VOC_Contact_Name__c</fullName>
        <label>VOC Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_Type__c</fullName>
        <label>VOC Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_for_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What are the primary reasons you chose to partner with ProService? -Value for Cost</description>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? -Value for Cost</inlineHelpText>
        <label>Value for Cost</label>
        <type>Checkbox</type>
    </fields>
    <label>VOC</label>
    <nameField>
        <displayFormat>VOC-{0000000}</displayFormat>
        <label>VOC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>